# dough_mixer

./: .gitignore  CMakeLists.txt  README.md  lv_conf.h
components/BSP/: CMakeLists.txt
components/BSP/FT6336U_TOUCH/: touch.c  touch.h
components/BSP/GPTIM/: gptim.c  gptim.h
components/BSP/HTTP/: http.c  http.h  http.html
components/BSP/IIC/: iic.c  iic.h
components/BSP/LVGL_UI/: lvgl.h  lvgl_ui.c  lvgl_ui.h
components/BSP/MOTOR/: motor.c  motor.h
components/BSP/SPI/: spi.c  spi.h
components/BSP/ST7789V_LCD/: lcd.c  lcd.h
components/BSP/UART/: uart.c  uart.h
components/BSP/WIFI/: wifi.c  wifi.h
components/BSP/ui/: .eez-project-build  action.cpp  actions.h  fonts.h  screens.c  screens.h  ui.c  ui.h  ui_font_my_character_14.c  ui_font_my_character_16.c  ui_font_my_character_18.c  ui_font_my_character_24.c  ui_font_my_character_32.c  vars.cpp  vars.h
docs/: WIFI_TECHNICAL_SPEC.md
main/: idf_component.yml  main.c  main.cpp
mixer/: mixer.eez-project-ui-state
